add force tools module

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,11 @@
 [Configs]
 File_Path = ./data
 Mode = single
-ForceConstant = 0.1
+ForceConstant = 0.031
 Deflection_Sensitive = -1
+Transform_Method = r2
+Step_Length = 50
+
 
 [DataFormat]
 Delimiter = tab
